cleanup interact SIR

--- a/covid19_interactSIR.ipynb
+++ b/covid19_interactSIR.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:47.306918Z",
-     "start_time": "2020-04-02T06:18:45.673383Z"
+     "end_time": "2020-04-02T06:24:15.921781Z",
+     "start_time": "2020-04-02T06:24:15.228944Z"
     }
    },
    "outputs": [],
@@ -22,14 +22,13 @@
     "import numpy as np\n",
     "from scipy.integrate import odeint\n",
     "import matplotlib.pyplot as plt\n",
-    "from datetime import datetime,timedelta\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "# from sklearn.metrics import mean_squared_error\n",
     "from scipy.optimize import curve_fit, fsolve\n",
     "\n",
     "from IPython.display import Image\n",
     "from ipywidgets import interact, fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
     "\n",
-    "from pandas.tseries.offsets import Week\n",
+    "# from pandas.tseries.offsets import Week\n",
     "%matplotlib inline"
    ]
   },
@@ -44,9 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Load data from JHU"
    ]
@@ -56,10 +53,9 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:47.844478Z",
-     "start_time": "2020-04-02T06:18:47.837531Z"
-    },
-    "hidden": true
+     "end_time": "2020-04-02T06:24:16.139707Z",
+     "start_time": "2020-04-02T06:24:16.134721Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -80,10 +76,9 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:48.106777Z",
-     "start_time": "2020-04-02T06:18:48.102784Z"
-    },
-    "hidden": true
+     "end_time": "2020-04-02T06:24:16.943026Z",
+     "start_time": "2020-04-02T06:24:16.940036Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -95,10 +90,9 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:48.677294Z",
-     "start_time": "2020-04-02T06:18:48.378046Z"
-    },
-    "hidden": true
+     "end_time": "2020-04-02T06:24:17.505603Z",
+     "start_time": "2020-04-02T06:24:17.195873Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -117,8 +111,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:51.454413Z",
-     "start_time": "2020-04-02T06:18:51.433437Z"
+     "end_time": "2020-04-02T06:24:18.054065Z",
+     "start_time": "2020-04-02T06:24:18.044093Z"
     }
    },
    "outputs": [],
@@ -132,8 +126,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:52.005333Z",
-     "start_time": "2020-04-02T06:18:52.001375Z"
+     "end_time": "2020-04-02T06:24:18.290845Z",
+     "start_time": "2020-04-02T06:24:18.285886Z"
     }
    },
    "outputs": [],
@@ -146,8 +140,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:52.704492Z",
-     "start_time": "2020-04-02T06:18:52.684518Z"
+     "end_time": "2020-04-02T06:24:18.520703Z",
+     "start_time": "2020-04-02T06:24:18.506742Z"
     }
    },
    "outputs": [],
@@ -174,8 +168,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:58.105064Z",
-     "start_time": "2020-04-02T06:18:58.101103Z"
+     "end_time": "2020-04-02T06:24:19.372831Z",
+     "start_time": "2020-04-02T06:24:19.364893Z"
     }
    },
    "outputs": [],
@@ -197,8 +191,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:18:59.184249Z",
-     "start_time": "2020-04-02T06:18:59.177266Z"
+     "end_time": "2020-04-02T06:24:19.811584Z",
+     "start_time": "2020-04-02T06:24:19.803604Z"
     }
    },
    "outputs": [],
@@ -250,18 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:19:05.420287Z",
-     "start_time": "2020-04-02T06:19:05.139003Z"
+     "end_time": "2020-04-02T06:25:58.532026Z",
+     "start_time": "2020-04-02T06:25:58.317962Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "870e0ba7dafa4acaa4627a278605bc13",
+       "model_id": "8dc720f46121484c951688624d8d01ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -297,181 +291,10 @@
     "         gamma=FloatSlider(value=0.06, min=0, max=0.06, step=0.001,\n",
     "                           continuous_update=False, readout_format='.2e',\n",
     "                          description='Recovery rate'),\n",
+    "         style = {'description_width': 'initial'},\n",
+    "#          layout=Layout(width='30%', height='200px'),\n",
     "         returnDataFrame=fixed(False));\n",
     "# axes.plot(COVID19_totalConf, 'rx')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# LogLog visualization (when are we on our way out of pandemic)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspired by https://t.co/q2AtUQBX5P?amp=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-01T17:30:59.400829Z",
-     "start_time": "2020-04-01T17:30:59.388799Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def infectionrate(Confirmed, country, return_plot = True, return_df=False):\n",
-    "    \"\"\"\n",
-    "    Confirmed: df adjusted from JHU\n",
-    "    country: string\n",
-    "    \"\"\"\n",
-    "    country = list(country)\n",
-    "    res = (Confirmed[country] - Confirmed[country].shift(1, freq=Week()).reindex(Confirmed[country].index)).fillna(value=0)\n",
-    "    if return_plot is True:\n",
-    "        res.plot()\n",
-    "    if return_df is True:\n",
-    "        return(res);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-01T17:38:38.311885Z",
-     "start_time": "2020-04-01T17:38:38.300126Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def loglog_covid(Confirmed, countries):\n",
-    "    \"\"\"\n",
-    "    Confirmed: df adjustedc from JHU\n",
-    "    countries: list in columns of Confirmed\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    fig, axes = plt.subplots(figsize=(15,8))\n",
-    "    \n",
-    "    df = infectionrate(Confirmed, countries, return_plot=False, return_df=True)\n",
-    "\n",
-    "    axes.loglog(Confirmed.sum(axis=1), df.values, 'o')\n",
-    "    axes.legend(countries)\n",
-    "    axes.set_title('Loglog')\n",
-    "    axes.set_ylabel('Weekly increase of positive cases')\n",
-    "    axes.set_xlabel('Total cases globally')\n",
-    "    axes.set_xlim([1e4,1e7])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualization of infection rate (weekly new cases)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the rate of infections for one or multiple countries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-01T17:38:39.455960Z",
-     "start_time": "2020-04-01T17:38:38.728377Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0e1ade392ab4b26b9fe1abc4321010a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(SelectMultiple(description='Select country(ies)', index=(16, 84, 153, 168), layout=Layou…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "interact(infectionrate,\n",
-    "         Confirmed = fixed(Confirmed),\n",
-    "         country = SelectMultiple(options=list(Confirmed.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
-    "                                  description='Select country(ies)',\n",
-    "                                  style = {'description_width': 'initial'},\n",
-    "                                  layout=Layout(width='40%', height='100px')),\n",
-    "         return_df = fixed(False),\n",
-    "         return_plot = fixed(True));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## loglog plot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspired by https://t.co/q2AtUQBX5P?amp=1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A smart way of visualizing how effective are the measures taken from each country to limit the infection rate. When the Y axis values drop significantly, this means that the spreading of the infections is sensibly decreased."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-01T17:39:19.457191Z",
-     "start_time": "2020-04-01T17:39:18.227109Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68080b30311b4b92aab45f704a87ccf0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(16, 84…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "interact(loglog_covid,\n",
-    "         Confirmed = fixed(Confirmed),\n",
-    "         countries = SelectMultiple(options=list(Confirmed.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
-    "                                 description='Select countries (Ctrl+ for multi-selection)', \n",
-    "                                    style = {'description_width': 'initial'},\n",
-    "                                    layout=Layout(width='50%', height='200px')),\n",
-    "         return_df= fixed(False));"
    ]
   },
   {
