loglogplot2 function to skip internal function

--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:02.847350Z",
-     "start_time": "2020-04-02T13:22:01.602178Z"
+     "end_time": "2020-04-02T17:07:27.346515Z",
+     "start_time": "2020-04-02T17:07:23.681395Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:03.809735Z",
-     "start_time": "2020-04-02T13:22:03.805747Z"
+     "end_time": "2020-04-02T17:07:27.354714Z",
+     "start_time": "2020-04-02T17:07:27.346515Z"
     }
    },
    "outputs": [],
@@ -77,8 +77,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:04.119595Z",
-     "start_time": "2020-04-02T13:22:04.115603Z"
+     "end_time": "2020-04-02T17:07:28.156909Z",
+     "start_time": "2020-04-02T17:07:28.148983Z"
     }
    },
    "outputs": [],
@@ -91,8 +91,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:04.979267Z",
-     "start_time": "2020-04-02T13:22:04.705127Z"
+     "end_time": "2020-04-02T17:07:29.147257Z",
+     "start_time": "2020-04-02T17:07:28.938193Z"
     }
    },
    "outputs": [],
@@ -112,8 +112,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:06.222918Z",
-     "start_time": "2020-04-02T13:22:06.207958Z"
+     "end_time": "2020-04-02T17:07:35.783413Z",
+     "start_time": "2020-04-02T17:07:35.752433Z"
     }
    },
    "outputs": [],
@@ -127,8 +127,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:06.726610Z",
-     "start_time": "2020-04-02T13:22:06.721584Z"
+     "end_time": "2020-04-02T17:07:35.930510Z",
+     "start_time": "2020-04-02T17:07:35.922345Z"
     }
    },
    "outputs": [],
@@ -141,8 +141,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:07.268128Z",
-     "start_time": "2020-04-02T13:22:07.254160Z"
+     "end_time": "2020-04-02T17:07:36.199341Z",
+     "start_time": "2020-04-02T17:07:36.179104Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:08.518379Z",
-     "start_time": "2020-04-02T13:22:08.512400Z"
+     "end_time": "2020-04-02T17:07:37.700161Z",
+     "start_time": "2020-04-02T17:07:37.692183Z"
     }
    },
    "outputs": [],
@@ -184,8 +184,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:09.016667Z",
-     "start_time": "2020-04-02T13:22:09.007685Z"
+     "end_time": "2020-04-02T17:07:39.149688Z",
+     "start_time": "2020-04-02T17:07:39.140617Z"
     }
    },
    "outputs": [],
@@ -242,15 +242,15 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:10.716325Z",
-     "start_time": "2020-04-02T13:22:10.530227Z"
+     "end_time": "2020-04-02T17:07:42.377684Z",
+     "start_time": "2020-04-02T17:07:41.973795Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d06950981ab40ff9874526f4c0d7930",
+       "model_id": "619fb04f078e40a8aa05337c11187f1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,14 +270,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# SIR Model definition"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Inspired by https://www.linkedin.com/pulse/covid-19-from-model-prediction-predictive-control-ingmar-nopens/"
    ]
@@ -289,7 +293,8 @@
     "ExecuteTime": {
      "end_time": "2020-04-02T13:22:14.378743Z",
      "start_time": "2020-04-02T13:22:14.373757Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -312,7 +317,8 @@
     "ExecuteTime": {
      "end_time": "2020-04-02T13:22:14.934551Z",
      "start_time": "2020-04-02T13:22:14.927566Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -349,14 +355,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Run SIR model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Try to fir the SIR model to the cases of a specific country and compare it to the logistic model"
    ]
@@ -368,7 +378,8 @@
     "ExecuteTime": {
      "end_time": "2020-04-02T13:22:17.019488Z",
      "start_time": "2020-04-02T13:22:16.785123Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -430,11 +441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:19.160258Z",
-     "start_time": "2020-04-02T13:22:19.153246Z"
+     "end_time": "2020-04-02T17:12:04.737235Z",
+     "start_time": "2020-04-02T17:12:04.724704Z"
     }
    },
    "outputs": [],
@@ -454,11 +465,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:19.855905Z",
-     "start_time": "2020-04-02T13:22:19.848959Z"
+     "end_time": "2020-04-02T17:12:05.692318Z",
+     "start_time": "2020-04-02T17:12:05.682329Z"
     }
    },
    "outputs": [],
@@ -497,18 +508,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:22.126441Z",
-     "start_time": "2020-04-02T13:22:21.806523Z"
+     "end_time": "2020-04-02T17:12:13.790872Z",
+     "start_time": "2020-04-02T17:12:12.981084Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba88e881f6b4f539f30ab5ba315533b",
+       "model_id": "97c1a1d5f688491eb0dab83977016ee1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,18 +565,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T13:22:25.612683Z",
-     "start_time": "2020-04-02T13:22:24.952976Z"
+     "end_time": "2020-04-02T17:15:07.520893Z",
+     "start_time": "2020-04-02T17:15:05.888075Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "907b24ff88cd4461bf163e49a8f61d98",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -586,6 +604,97 @@
     "                                    layout=Layout(width='50%', height='200px')),\n",
     "         return_df= fixed(False));"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## loglog plot (alternative to facilitate widgets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-02T17:17:10.191110Z",
+     "start_time": "2020-04-02T17:17:10.175051Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Confirmedweeklyrates = infectionrate(Confirmed, Confirmed.columns, return_plot=False, return_df=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-02T17:19:44.840897Z",
+     "start_time": "2020-04-02T17:19:44.834114Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def loglog_covid2(Confirmedweeklyrates, countries):\n",
+    "    \"\"\"\n",
+    "    Confirmed: df adjustedc from JHU\n",
+    "    countries: list in columns of Confirmed\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    fig, axes = plt.subplots(figsize=(15,8))\n",
+    "    \n",
+    "\n",
+    "    axes.loglog(Confirmed.sum(axis=1), Confirmedweeklyrates[countries].values, 'o')\n",
+    "    axes.legend(countries)\n",
+    "    axes.set_title('Loglog')\n",
+    "    axes.set_ylabel('Weekly increase of positive cases')\n",
+    "    axes.set_xlabel('Total cases globally')\n",
+    "    axes.set_xlim([1e4,1e7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-02T17:20:10.628493Z",
+     "start_time": "2020-04-02T17:20:09.483242Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "642b5715dafb4c1499d6f514969d3192",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(16, 84…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "interact(loglog_covid,\n",
+    "         Confirmed = fixed(Confirmed),\n",
+    "         countries = SelectMultiple(options=list(Confirmed.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
+    "                                 description='Select countries (Ctrl+ for multi-selection)', \n",
+    "                                    style = {'description_width': 'initial'},\n",
+    "                                    layout=Layout(width='50%', height='200px')),\n",
+    "         return_df= fixed(False));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
