--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:27.346515Z",
-     "start_time": "2020-04-02T17:07:23.681395Z"
+     "end_time": "2020-04-04T09:26:35.365386Z",
+     "start_time": "2020-04-04T09:26:31.033538Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:27.354714Z",
-     "start_time": "2020-04-02T17:07:27.346515Z"
+     "end_time": "2020-04-04T09:26:35.374360Z",
+     "start_time": "2020-04-04T09:26:35.368376Z"
     }
    },
    "outputs": [],
@@ -77,8 +77,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:28.156909Z",
-     "start_time": "2020-04-02T17:07:28.148983Z"
+     "end_time": "2020-04-04T09:26:43.859350Z",
+     "start_time": "2020-04-04T09:26:43.855361Z"
     }
    },
    "outputs": [],
@@ -91,8 +91,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:29.147257Z",
-     "start_time": "2020-04-02T17:07:28.938193Z"
+     "end_time": "2020-04-04T09:26:44.727143Z",
+     "start_time": "2020-04-04T09:26:44.504137Z"
     }
    },
    "outputs": [],
@@ -112,8 +112,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:35.783413Z",
-     "start_time": "2020-04-02T17:07:35.752433Z"
+     "end_time": "2020-04-04T09:26:46.256840Z",
+     "start_time": "2020-04-04T09:26:46.233797Z"
     }
    },
    "outputs": [],
@@ -127,8 +127,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:35.930510Z",
-     "start_time": "2020-04-02T17:07:35.922345Z"
+     "end_time": "2020-04-04T09:26:48.739638Z",
+     "start_time": "2020-04-04T09:26:48.734651Z"
     }
    },
    "outputs": [],
@@ -141,8 +141,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:36.199341Z",
-     "start_time": "2020-04-02T17:07:36.179104Z"
+     "end_time": "2020-04-04T09:26:50.714655Z",
+     "start_time": "2020-04-04T09:26:50.694745Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:37.700161Z",
-     "start_time": "2020-04-02T17:07:37.692183Z"
+     "end_time": "2020-04-04T09:26:53.757289Z",
+     "start_time": "2020-04-04T09:26:53.752603Z"
     }
    },
    "outputs": [],
@@ -184,8 +184,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:39.149688Z",
-     "start_time": "2020-04-02T17:07:39.140617Z"
+     "end_time": "2020-04-04T09:26:53.989175Z",
+     "start_time": "2020-04-04T09:26:53.967230Z"
     }
    },
    "outputs": [],
@@ -242,15 +242,15 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:07:42.377684Z",
-     "start_time": "2020-04-02T17:07:41.973795Z"
+     "end_time": "2020-04-04T09:27:03.745631Z",
+     "start_time": "2020-04-04T09:27:03.378865Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7dc924b49dd4f19b898bc82aac1d138",
+       "model_id": "dc3d558b8fcf4b8faee2d5f8aca92e8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,8 +287,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:23:58.812309Z",
-     "start_time": "2020-04-02T17:23:58.803752Z"
+     "end_time": "2020-04-04T09:27:08.152126Z",
+     "start_time": "2020-04-04T09:27:08.145148Z"
     }
    },
    "outputs": [],
@@ -310,8 +310,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:23:59.072167Z",
-     "start_time": "2020-04-02T17:23:59.060647Z"
+     "end_time": "2020-04-04T09:27:08.618693Z",
+     "start_time": "2020-04-04T09:27:08.607752Z"
     }
    },
    "outputs": [],
@@ -363,18 +363,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:24:01.019375Z",
-     "start_time": "2020-04-02T17:24:00.564898Z"
+     "end_time": "2020-04-04T09:41:52.400431Z",
+     "start_time": "2020-04-04T09:41:51.940378Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4559c38158aa4fd491e3f242f6b4701b",
+       "model_id": "8cbccd834b0b48e5a466e116195b7b9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,22 +430,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:12:04.737235Z",
-     "start_time": "2020-04-02T17:12:04.724704Z"
+     "end_time": "2020-04-04T09:34:16.958183Z",
+     "start_time": "2020-04-04T09:34:16.945221Z"
     }
    },
    "outputs": [],
    "source": [
-    "def infectionrate(Confirmed, country, return_plot = True, return_df=False):\n",
+    "Confirmedweeklyrates = (Confirmed - Confirmed.shift(1, freq=Week()).reindex(Confirmed.index)).fillna(value=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T09:34:17.567436Z",
+     "start_time": "2020-04-04T09:34:17.560492Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def plot_infectionrate(Confirmedweeklyrates, country, return_plot = True, return_df=False):\n",
     "    \"\"\"\n",
-    "    Confirmed: df adjusted from JHU\n",
+    "    Confirmed_rate: rate of infection adjusted from JHU\n",
     "    country: string\n",
     "    \"\"\"\n",
     "    country = list(country)\n",
-    "    res = (Confirmed[country] - Confirmed[country].shift(1, freq=Week()).reindex(Confirmed[country].index)).fillna(value=0)\n",
+    "    res = Confirmed_Wrate[country]\n",
     "    if return_plot is True:\n",
     "        res.plot()\n",
     "    if return_df is True:\n",
@@ -454,16 +468,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:12:05.692318Z",
-     "start_time": "2020-04-02T17:12:05.682329Z"
+     "end_time": "2020-04-04T09:38:29.452380Z",
+     "start_time": "2020-04-04T09:38:29.443171Z"
     }
    },
    "outputs": [],
    "source": [
-    "def loglog_covid(Confirmed, countries):\n",
+    "def loglog_covid(Confirmedweeklyrates, countries):\n",
     "    \"\"\"\n",
     "    Confirmed: df adjustedc from JHU\n",
     "    countries: list in columns of Confirmed\n",
@@ -471,9 +485,9 @@
     "    \"\"\"\n",
     "    fig, axes = plt.subplots(figsize=(15,8))\n",
     "    \n",
-    "    df = infectionrate(Confirmed, countries, return_plot=False, return_df=True)\n",
+    "    df = infectionrate(Confirmedweeklyrates, countries, return_plot=False, return_df=True)\n",
     "\n",
-    "    axes.loglog(Confirmed.sum(axis=1), df.values, 'o')\n",
+    "    axes.loglog(Confirmedweeklyrates.sum(axis=1), df.values, 'o')\n",
     "    axes.legend(countries)\n",
     "    axes.set_title('Loglog')\n",
     "    axes.set_ylabel('Weekly increase of positive cases')\n",
@@ -497,23 +511,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:12:13.790872Z",
-     "start_time": "2020-04-02T17:12:12.981084Z"
+     "end_time": "2020-04-04T09:42:02.242619Z",
+     "start_time": "2020-04-04T09:42:01.490434Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3adbe0c0d0a142bc8df0b8564e12c321",
+       "model_id": "db2d8758fda34c9fafb02dde778a53c5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(SelectMultiple(description='Select country(ies)', index=(16, 84, 153, 168), layout=Layou…"
+       "interactive(children=(SelectMultiple(description='Select country(ies)', index=(16, 84, 154, 169), layout=Layou…"
       ]
      },
      "metadata": {},
@@ -521,9 +535,9 @@
     }
    ],
    "source": [
-    "interact(infectionrate,\n",
-    "         Confirmed = fixed(Confirmed),\n",
-    "         country = SelectMultiple(options=list(Confirmed.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
+    "interact(plot_infectionrate,\n",
+    "         Confirmedweeklyrates = fixed(Confirmedweeklyrates),\n",
+    "         country = SelectMultiple(options=list(Confirmedweeklyrates.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
     "                                  description='Select country(ies)',\n",
     "                                  style = {'description_width': 'initial'},\n",
     "                                  layout=Layout(width='40%', height='100px')),\n",
@@ -554,18 +568,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T17:15:07.520893Z",
-     "start_time": "2020-04-02T17:15:05.888075Z"
+     "end_time": "2020-04-04T09:42:08.612896Z",
+     "start_time": "2020-04-04T09:42:07.337708Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0505009293704b6db2faac4d66f271d4",
+       "model_id": "48e22e3582cb4a699cd830bda7e3dc58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -579,7 +593,7 @@
    ],
    "source": [
     "interact(loglog_covid,\n",
-    "         Confirmed = fixed(Confirmed),\n",
+    "         Confirmedweeklyrates = fixed(Confirmedweeklyrates),\n",
     "         countries = SelectMultiple(options=list(Confirmed.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
     "                                 description='Select countries (Ctrl+ for multi-selection)', \n",
     "                                    style = {'description_width': 'initial'},\n",
@@ -589,7 +603,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## loglog plot (alternative to facilitate widgets)"
    ]
@@ -601,11 +617,12 @@
     "ExecuteTime": {
      "end_time": "2020-04-02T17:17:10.191110Z",
      "start_time": "2020-04-02T17:17:10.175051Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
-    "Confirmedweeklyrates = infectionrate(Confirmed, Confirmed.columns, return_plot=False, return_df=True)"
+    "Confirmedweeklyrates = (Confirmed - Confirmed.shift(1, freq=Week()).reindex(Confirmed.index)).fillna(value=0)"
    ]
   },
   {
@@ -615,7 +632,8 @@
     "ExecuteTime": {
      "end_time": "2020-04-02T17:19:44.840897Z",
      "start_time": "2020-04-02T17:19:44.834114Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -643,7 +661,8 @@
     "ExecuteTime": {
      "end_time": "2020-04-02T17:20:10.628493Z",
      "start_time": "2020-04-02T17:20:09.483242Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
