--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:35.365386Z",
-     "start_time": "2020-04-04T09:26:31.033538Z"
+     "end_time": "2020-04-04T09:51:54.484023Z",
+     "start_time": "2020-04-04T09:51:54.471088Z"
     }
    },
    "outputs": [],
@@ -27,7 +27,8 @@
     "from scipy.optimize import curve_fit, fsolve\n",
     "\n",
     "from IPython.display import Image\n",
-    "from ipywidgets import interact, fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
+    "from ipywidgets import interact\n",
+    "from ipywidgets import fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
     "\n",
     "from pandas.tseries.offsets import Week\n",
     "%matplotlib inline"
@@ -51,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:35.374360Z",
-     "start_time": "2020-04-04T09:26:35.368376Z"
+     "end_time": "2020-04-04T09:51:55.884566Z",
+     "start_time": "2020-04-04T09:51:55.878585Z"
     }
    },
    "outputs": [],
@@ -74,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:43.859350Z",
-     "start_time": "2020-04-04T09:26:43.855361Z"
+     "end_time": "2020-04-04T09:51:56.096343Z",
+     "start_time": "2020-04-04T09:51:56.092355Z"
     }
    },
    "outputs": [],
@@ -88,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:44.727143Z",
-     "start_time": "2020-04-04T09:26:44.504137Z"
+     "end_time": "2020-04-04T09:51:56.598528Z",
+     "start_time": "2020-04-04T09:51:56.330504Z"
     }
    },
    "outputs": [],
@@ -109,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:46.256840Z",
-     "start_time": "2020-04-04T09:26:46.233797Z"
+     "end_time": "2020-04-04T09:51:57.212603Z",
+     "start_time": "2020-04-04T09:51:57.201438Z"
     }
    },
    "outputs": [],
@@ -124,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:48.739638Z",
-     "start_time": "2020-04-04T09:26:48.734651Z"
+     "end_time": "2020-04-04T09:51:57.500925Z",
+     "start_time": "2020-04-04T09:51:57.497310Z"
     }
    },
    "outputs": [],
@@ -138,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:50.714655Z",
-     "start_time": "2020-04-04T09:26:50.694745Z"
+     "end_time": "2020-04-04T09:51:57.856342Z",
+     "start_time": "2020-04-04T09:51:57.840359Z"
     }
    },
    "outputs": [],
@@ -166,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:53.757289Z",
-     "start_time": "2020-04-04T09:26:53.752603Z"
+     "end_time": "2020-04-04T09:51:58.825437Z",
+     "start_time": "2020-04-04T09:51:58.820487Z"
     }
    },
    "outputs": [],
@@ -181,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:26:53.989175Z",
-     "start_time": "2020-04-04T09:26:53.967230Z"
+     "end_time": "2020-04-04T09:51:59.115251Z",
+     "start_time": "2020-04-04T09:51:59.097284Z"
     }
    },
    "outputs": [],
@@ -239,18 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:27:03.745631Z",
-     "start_time": "2020-04-04T09:27:03.378865Z"
+     "end_time": "2020-04-04T09:52:01.642245Z",
+     "start_time": "2020-04-04T09:52:01.338949Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc3d558b8fcf4b8faee2d5f8aca92e8d",
+       "model_id": "08edcd0627864c69923c8a4a03ac3f64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:27:08.152126Z",
-     "start_time": "2020-04-04T09:27:08.145148Z"
+     "end_time": "2020-04-04T09:52:03.118703Z",
+     "start_time": "2020-04-04T09:52:03.111761Z"
     }
    },
    "outputs": [],
@@ -307,11 +308,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:27:08.618693Z",
-     "start_time": "2020-04-04T09:27:08.607752Z"
+     "end_time": "2020-04-04T09:52:03.487030Z",
+     "start_time": "2020-04-04T09:52:03.475061Z"
     }
    },
    "outputs": [],
@@ -363,18 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:41:52.400431Z",
-     "start_time": "2020-04-04T09:41:51.940378Z"
+     "end_time": "2020-04-04T09:52:05.067316Z",
+     "start_time": "2020-04-04T09:52:04.582153Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cbccd834b0b48e5a466e116195b7b9e",
+       "model_id": "7a81ed210ecb4ae2a5ea02a7ee7175df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,11 +431,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:34:16.958183Z",
-     "start_time": "2020-04-04T09:34:16.945221Z"
+     "end_time": "2020-04-04T09:52:06.731193Z",
+     "start_time": "2020-04-04T09:52:06.718281Z"
     }
    },
    "outputs": [],
@@ -444,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:34:17.567436Z",
-     "start_time": "2020-04-04T09:34:17.560492Z"
+     "end_time": "2020-04-04T09:52:07.217797Z",
+     "start_time": "2020-04-04T09:52:07.211029Z"
     }
    },
    "outputs": [],
@@ -468,11 +469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:38:29.452380Z",
-     "start_time": "2020-04-04T09:38:29.443171Z"
+     "end_time": "2020-04-04T09:52:07.792693Z",
+     "start_time": "2020-04-04T09:52:07.784754Z"
     }
    },
    "outputs": [],
@@ -511,18 +512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:42:02.242619Z",
-     "start_time": "2020-04-04T09:42:01.490434Z"
+     "end_time": "2020-04-04T09:52:10.071050Z",
+     "start_time": "2020-04-04T09:52:09.307983Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db2d8758fda34c9fafb02dde778a53c5",
+       "model_id": "eecb8e7b6f984f0fbef84a2c63b3a8a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,18 +569,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:42:08.612896Z",
-     "start_time": "2020-04-04T09:42:07.337708Z"
+     "end_time": "2020-04-04T09:52:13.965876Z",
+     "start_time": "2020-04-04T09:52:12.571329Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48e22e3582cb4a699cd830bda7e3dc58",
+       "model_id": "c3dd6ca0081b44a28e58546f2a057058",
        "version_major": 2,
        "version_minor": 0
       },
