--- a/covid19_logistic.ipynb
+++ b/covid19_logistic.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:16.953116Z",
-     "start_time": "2020-04-04T09:54:13.871765Z"
+     "end_time": "2020-04-04T09:57:48.601852Z",
+     "start_time": "2020-04-04T09:57:46.355490Z"
     }
    },
    "outputs": [],
@@ -23,12 +23,12 @@
     "from scipy.integrate import odeint\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime,timedelta\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "# from sklearn.metrics import mean_squared_error\n",
     "from scipy.optimize import curve_fit, fsolve\n",
     "\n",
-    "from IPython.display import Image\n",
+    "# from IPython.display import Image\n",
     "from ipywidgets import interact\n",
-    "from ipywidgets import fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
+    "from ipywidgets import fixed, Dropdown, SelectMultiple\n",
     "\n",
     "from pandas.tseries.offsets import Week\n",
     "%matplotlib inline"
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:17.976128Z",
-     "start_time": "2020-04-04T09:54:17.970810Z"
+     "end_time": "2020-04-04T09:57:49.875369Z",
+     "start_time": "2020-04-04T09:57:49.870382Z"
     }
    },
    "outputs": [],
@@ -75,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:18.163635Z",
-     "start_time": "2020-04-04T09:54:18.161039Z"
+     "end_time": "2020-04-04T09:57:50.621339Z",
+     "start_time": "2020-04-04T09:57:50.617500Z"
     }
    },
    "outputs": [],
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:18.653230Z",
-     "start_time": "2020-04-04T09:54:18.371701Z"
+     "end_time": "2020-04-04T09:57:51.668663Z",
+     "start_time": "2020-04-04T09:57:51.260466Z"
     }
    },
    "outputs": [],
@@ -110,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:19.449390Z",
-     "start_time": "2020-04-04T09:54:19.434857Z"
+     "end_time": "2020-04-04T09:57:52.436410Z",
+     "start_time": "2020-04-04T09:57:52.420407Z"
     }
    },
    "outputs": [],
@@ -125,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:19.687092Z",
-     "start_time": "2020-04-04T09:54:19.683138Z"
+     "end_time": "2020-04-04T09:57:53.040058Z",
+     "start_time": "2020-04-04T09:57:53.035110Z"
     }
    },
    "outputs": [],
@@ -139,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:20.044434Z",
-     "start_time": "2020-04-04T09:54:20.023318Z"
+     "end_time": "2020-04-04T09:57:53.688762Z",
+     "start_time": "2020-04-04T09:57:53.670647Z"
     }
    },
    "outputs": [],
@@ -167,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:21.321115Z",
-     "start_time": "2020-04-04T09:54:21.315193Z"
+     "end_time": "2020-04-04T09:57:54.756577Z",
+     "start_time": "2020-04-04T09:57:54.751541Z"
     }
    },
    "outputs": [],
@@ -182,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:21.799544Z",
-     "start_time": "2020-04-04T09:54:21.782630Z"
+     "end_time": "2020-04-04T09:57:55.530700Z",
+     "start_time": "2020-04-04T09:57:55.517734Z"
     }
    },
    "outputs": [],
@@ -240,18 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:54:23.507602Z",
-     "start_time": "2020-04-04T09:54:23.169880Z"
+     "end_time": "2020-04-04T09:57:57.758018Z",
+     "start_time": "2020-04-04T09:57:57.370456Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0edc52b966c4be5abe3fada255b10b2",
+       "model_id": "e162f15a5fe640e1add1679caa710ca4",
        "version_major": 2,
        "version_minor": 0
       },
