--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -469,11 +469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:52:07.792693Z",
-     "start_time": "2020-04-04T09:52:07.784754Z"
+     "end_time": "2020-04-04T10:38:18.287158Z",
+     "start_time": "2020-04-04T10:38:18.280372Z"
     }
    },
    "outputs": [],
@@ -486,9 +486,9 @@
     "    \"\"\"\n",
     "    fig, axes = plt.subplots(figsize=(15,8))\n",
     "    \n",
-    "    df = infectionrate(Confirmedweeklyrates, countries, return_plot=False, return_df=True)\n",
+    "    df = Confirmedweeklyrates[list(countries)]\n",
     "\n",
-    "    axes.loglog(Confirmedweeklyrates.sum(axis=1), df.values, 'o')\n",
+    "    axes.loglog(Confirmed.sum(axis=1), df.values, 'o')\n",
     "    axes.legend(countries)\n",
     "    axes.set_title('Loglog')\n",
     "    axes.set_ylabel('Weekly increase of positive cases')\n",
@@ -512,18 +512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:52:10.071050Z",
-     "start_time": "2020-04-04T09:52:09.307983Z"
+     "end_time": "2020-04-04T10:29:53.756414Z",
+     "start_time": "2020-04-04T10:29:52.983486Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eecb8e7b6f984f0fbef84a2c63b3a8a8",
+       "model_id": "bf1f21f54ddb4b29bb0bd9f0665db06e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -569,18 +569,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T09:52:13.965876Z",
-     "start_time": "2020-04-04T09:52:12.571329Z"
+     "end_time": "2020-04-04T10:38:22.385854Z",
+     "start_time": "2020-04-04T10:38:21.209224Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3dd6ca0081b44a28e58546f2a057058",
+       "model_id": "1624779e85b640809662875414614bff",
        "version_major": 2,
        "version_minor": 0
       },
