--- a/covid19_interactSIR.ipynb
+++ b/covid19_interactSIR.ipynb
@@ -8,13 +8,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SIR model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to fir the SIR model to the cases of a specific country and compare it to the logistic model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-04T12:57:00.059740Z",
+     "start_time": "2020-04-04T12:56:59.534498Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3fc50f2945e6469f8843adea92451d39",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=500000.0, continuous_update=False, description='Affected population', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "interact(SIRmodel_logbeta2, \n",
+    "         timesteps=fixed(np.arange(0., 1000, 1)), \n",
+    "         country = Dropdown(options=list(Confirmed.columns), value='US'),\n",
+    "         measured_cases = fixed(Confirmed),\n",
+    "         S_0=FloatSlider(value=500000, min=Confirmed.max().mean(), max=5*Confirmed.max().max(), step=1000,\n",
+    "                           continuous_update=False, description='Affected population'), I_0=fixed(1), R_0=fixed(0),\n",
+    "         log10_beta=FloatSlider(value=-6.3, min=-8, max=-5, step=0.001, continuous_update=True, readout_format='.2e',\n",
+    "                               description='log10(infection rate)'),\n",
+    "         gamma=FloatSlider(value=0.06, min=0, max=0.06, step=0.001, continuous_update=False, readout_format='.2e',\n",
+    "                          description='Recovery rate'), style = {'description_width': 'initial'},\n",
+    "#          layout=Layout(width='60%', height='300px'),\n",
+    "         returnDataFrame=fixed(False));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below you can find the code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Load modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:15.921781Z",
-     "start_time": "2020-04-02T06:24:15.228944Z"
-    }
+     "end_time": "2020-04-04T12:52:09.561463Z",
+     "start_time": "2020-04-04T12:52:07.511904Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -34,7 +105,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<b> Preface </b>\n",
     "    \n",
@@ -43,7 +116,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Load data from JHU"
    ]
@@ -53,9 +128,10 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:16.139707Z",
-     "start_time": "2020-04-02T06:24:16.134721Z"
-    }
+     "end_time": "2020-04-04T12:52:11.123042Z",
+     "start_time": "2020-04-04T12:52:11.113892Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -76,9 +152,10 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:16.943026Z",
-     "start_time": "2020-04-02T06:24:16.940036Z"
-    }
+     "end_time": "2020-04-04T12:52:11.502929Z",
+     "start_time": "2020-04-04T12:52:11.499160Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -90,9 +167,10 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:17.505603Z",
-     "start_time": "2020-04-02T06:24:17.195873Z"
-    }
+     "end_time": "2020-04-04T12:52:12.323223Z",
+     "start_time": "2020-04-04T12:52:11.992214Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -101,7 +179,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Structure dataset"
    ]
@@ -111,9 +191,10 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:18.054065Z",
-     "start_time": "2020-04-02T06:24:18.044093Z"
-    }
+     "end_time": "2020-04-04T12:52:13.087083Z",
+     "start_time": "2020-04-04T12:52:13.070995Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -126,9 +207,10 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:18.290845Z",
-     "start_time": "2020-04-02T06:24:18.285886Z"
-    }
+     "end_time": "2020-04-04T12:52:13.349331Z",
+     "start_time": "2020-04-04T12:52:13.342805Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -140,9 +222,10 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:18.520703Z",
-     "start_time": "2020-04-02T06:24:18.506742Z"
-    }
+     "end_time": "2020-04-04T12:52:13.596570Z",
+     "start_time": "2020-04-04T12:52:13.575699Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -151,14 +234,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# SIR Model definition"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Inspired by https://www.linkedin.com/pulse/covid-19-from-model-prediction-predictive-control-ingmar-nopens/"
    ]
@@ -168,9 +255,10 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:19.372831Z",
-     "start_time": "2020-04-02T06:24:19.364893Z"
-    }
+     "end_time": "2020-04-04T12:52:14.310556Z",
+     "start_time": "2020-04-04T12:52:14.302234Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -191,9 +279,10 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:24:19.811584Z",
-     "start_time": "2020-04-02T06:24:19.803604Z"
-    }
+     "end_time": "2020-04-04T12:52:14.758237Z",
+     "start_time": "2020-04-04T12:52:14.746156Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -229,78 +318,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Run SIR model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Try to fir the SIR model to the cases of a specific country and compare it to the logistic model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-02T06:25:58.532026Z",
-     "start_time": "2020-04-02T06:25:58.317962Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dc720f46121484c951688624d8d01ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=500000.0, continuous_update=False, description='Affected population', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "interact(SIRmodel_logbeta2, \n",
-    "         \n",
-    "         timesteps=fixed(np.arange(0., 1000, 1)), \n",
-    "         \n",
-    "         country = Dropdown(options=list(Confirmed.columns), value='US'),\n",
-    "         \n",
-    "         measured_cases = fixed(Confirmed),\n",
-    "         \n",
-    "         S_0=FloatSlider(value=500000, \n",
-    "                           min=Confirmed.max().mean(), \n",
-    "                           max=5*Confirmed.max().max(), \n",
-    "                           step=1000,\n",
-    "                           continuous_update=False,\n",
-    "                           description='Affected population'), \n",
-    "         I_0=fixed(1), R_0=fixed(0),\n",
-    "         \n",
-    "         log10_beta=FloatSlider(value=-6.3, min=-8, max=-5, step=0.001,\n",
-    "                                continuous_update=True, readout_format='.2e',\n",
-    "                               description='log10(infection rate)'),\n",
-    "         \n",
-    "         gamma=FloatSlider(value=0.06, min=0, max=0.06, step=0.001,\n",
-    "                           continuous_update=False, readout_format='.2e',\n",
-    "                          description='Recovery rate'),\n",
-    "         style = {'description_width': 'initial'},\n",
-    "#          layout=Layout(width='30%', height='200px'),\n",
-    "         returnDataFrame=fixed(False));\n",
-    "# axes.plot(COVID19_totalConf, 'rx')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
