--- a/covid19_interactSIR.ipynb
+++ b/covid19_interactSIR.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try to fir the SIR model to the cases of a specific country and compare it to the logistic model"
+    "Try to fit the SIR model to the cases of a specific country and compare it to the logistic model"
    ]
   },
   {
