--- a/covid19_interactSIR.ipynb
+++ b/covid19_interactSIR.ipynb
@@ -48,8 +48,7 @@
    ],
    "source": [
     "interact(SIRmodel_logbeta2, \n",
-    "         timesteps=fixed(np.arange(0., 1000, 1)), \n",
-    "         country = Dropdown(options=list(Confirmed.columns), value='US'),\n",
+    "         timesteps=fixed(np.arange(0., 1000, 1)), country = Dropdown(options=list(Confirmed.columns), value='US'), \n",
     "         measured_cases = fixed(Confirmed),\n",
     "         S_0=FloatSlider(value=500000, min=Confirmed.max().mean(), max=5*Confirmed.max().max(), step=1000,\n",
     "                           continuous_update=False, description='Affected population'), I_0=fixed(1), R_0=fixed(0),\n",
