--- a/covid19_logistic.ipynb
+++ b/covid19_logistic.ipynb
@@ -23,23 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T12:59:38.766669Z",
-     "start_time": "2020-04-04T12:59:38.435448Z"
+     "end_time": "2020-04-04T13:12:48.540276Z",
+     "start_time": "2020-04-04T13:12:48.172137Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e363047e42f44db93abb38001eaf56a",
+       "model_id": "d27ed06a01e247da924c0995f9fb14d8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='nation', index=84, options=('Afghanistan', 'Albania', 'Algeria', '…"
+       "interactive(children=(Dropdown(description='country', index=84, options=('Afghanistan', 'Albania', 'Algeria', …"
       ]
      },
      "metadata": {},
@@ -49,7 +49,7 @@
    "source": [
     "interact(logistic_covid, \n",
     "         covid19_df = fixed(Confirmed),\n",
-    "         nation = Dropdown(options=list(Confirmed.columns), value='Italy'));"
+    "         country = Dropdown(options=list(Confirmed.columns), value='Italy'));"
    ]
   },
   {
@@ -261,23 +261,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T12:59:01.765265Z",
-     "start_time": "2020-04-04T12:59:01.748488Z"
+     "end_time": "2020-04-04T13:12:44.954823Z",
+     "start_time": "2020-04-04T13:12:44.936218Z"
     },
     "hidden": true
    },
    "outputs": [],
    "source": [
-    "def logistic_covid(covid19_df, nation):\n",
+    "def logistic_covid(covid19_df, country):\n",
     "    \"\"\"\n",
     "    df: dataframe of covid19 data with nations as columns and timestamp as index\n",
-    "    nation: string\n",
+    "    country: string\n",
     "    \n",
     "    \"\"\"\n",
-    "    df = covid19_df[nation]\n",
+    "    df = covid19_df[country]\n",
     "    \n",
     "    x = list(df.reset_index().index)\n",
     "    y = list(df.values)\n",
@@ -295,7 +295,7 @@
     "\n",
     "#     print('Infection speed '+str(round(a)))\n",
     "    print('Maximum infections occurred on '+str(pd.to_datetime(df.index[0]) + pd.to_timedelta(round(b), unit='D')))\n",
-    "    print('Total predicted infected '+str(round(c))+ ' +-'+str(round(errors[2])))\n",
+    "    print('Total predicted infections '+str(round(c))+ ' +-'+str(round(errors[2])))\n",
     "\n",
     "    sol = int(fsolve(lambda x : logistic_model(x,a,b,c) - int(c),b))\n",
     "    pred_x = list(range(max(x),sol))\n",
