--- a/covid19_loglogplot.ipynb
+++ b/covid19_loglogplot.ipynb
@@ -23,23 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:03:16.591020Z",
-     "start_time": "2020-04-04T13:03:15.747030Z"
+     "end_time": "2020-04-04T13:23:29.921084Z",
+     "start_time": "2020-04-04T13:23:28.999680Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4b09e836c79411b9c0ca5dde88e782d",
+       "model_id": "27b77d774bf044d09a35b259891c8ded",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(SelectMultiple(description='Select country(ies)', index=(16, 84, 154, 169), layout=Layou…"
+       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(16, 84…"
       ]
      },
      "metadata": {},
@@ -50,10 +50,9 @@
     "interact(plot_infectionrate,\n",
     "         Confirmedweeklyrates = fixed(Confirmedweeklyrates),\n",
     "         country = SelectMultiple(options=list(Confirmedweeklyrates.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
-    "                                  description='Select country(ies)',\n",
-    "                                  style = {'description_width': 'initial'},\n",
-    "                                  layout=Layout(width='40%', height='100px')),\n",
-    "         return_df = fixed(False),\n",
+    "                                  description='Select countries (Ctrl+ for multi-selection)',\n",
+    "                                  style = {'description_width': 'initial'}, layout=Layout(width='50%', height='100px')), \n",
+    "         return_df = fixed(False), \n",
     "         return_plot = fixed(True));"
    ]
   },
@@ -75,28 +74,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A smart way of visualizing how effective are the measures taken from each country to limit the infection rate. When the Y axis values drop significantly, this means that the spreading of the infections is sensibly decreased."
+    "A smart way of visualizing the effectiveness of social distancing for each country. \n",
+    "When the Y axis value (rate of infections) drops as a result of the strict measures of social distancing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:03:20.492689Z",
-     "start_time": "2020-04-04T13:03:19.140868Z"
+     "end_time": "2020-04-04T13:21:05.072445Z",
+     "start_time": "2020-04-04T13:21:03.846368Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97ca6df9c9d143598ead3753e647fd19",
+       "model_id": "b5330ea98a38416a9984fb53c170fe8d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(SelectMultiple(description='countries', index=(84, 16, 154, 169), options=('Afghanistan'…"
+       "interactive(children=(SelectMultiple(description='Select countries (Ctrl+ for multi-selection)', index=(84, 16…"
       ]
      },
      "metadata": {},
@@ -106,11 +106,10 @@
    "source": [
     "interact(loglog_covid2,\n",
     "         Confirmedweeklyrates = fixed(Confirmedweeklyrates),\n",
-    "         countries = SelectMultiple(options=Confirmedweeklyrates.columns, value=['Italy', 'Belgium', 'Spain', 'US']),\n",
-    "#                                     description='Select countries (Ctrl+ for multi-selection)', \n",
-    "#                                     style = {'description_width': 'initial'},\n",
-    "#                                     layout=Layout(width='50%', height='200px')),\n",
-    "         );"
+    "         countries = SelectMultiple(options=Confirmedweeklyrates.columns, \n",
+    "                                    description='Select countries (Ctrl+ for multi-selection)', \n",
+    "                                    style = {'description_width': 'initial'}, layout=Layout(width='60%', height='150px'),\n",
+    "                                    value=['Italy', 'Belgium', 'Spain', 'US']));"
    ]
   },
   {
@@ -288,18 +287,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# LogLog visualization (when are we on our way out of pandemic)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Inspired by https://t.co/q2AtUQBX5P?amp=1"
    ]
@@ -311,8 +306,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-04T13:00:54.877913Z",
      "start_time": "2020-04-04T13:00:54.848064Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -321,13 +315,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:00:55.174926Z",
-     "start_time": "2020-04-04T13:00:55.167307Z"
-    },
-    "hidden": true
+     "end_time": "2020-04-04T13:14:50.969727Z",
+     "start_time": "2020-04-04T13:14:50.965866Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -339,20 +332,19 @@
     "    country = list(country)\n",
     "    res = Confirmedweeklyrates[country]\n",
     "    if return_plot is True:\n",
-    "        res.plot()\n",
+    "        res.plot(figsize=(10,5))\n",
     "    if return_df is True:\n",
     "        return(res);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:00:59.041036Z",
-     "start_time": "2020-04-04T13:00:59.029364Z"
-    },
-    "hidden": true
+     "end_time": "2020-04-04T13:20:57.969678Z",
+     "start_time": "2020-04-04T13:20:57.956995Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -369,16 +361,14 @@
     "    axes.legend(countries)\n",
     "    axes.set_title('Loglog')\n",
     "    axes.set_ylabel('Weekly increase of positive cases')\n",
-    "    axes.set_xlabel('Total cases globally')\n",
+    "    axes.set_xlabel('Global cases confirmed')\n",
     "    axes.set_xlim([1e4,1e7])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
