--- a/covid19_interactSIR.ipynb
+++ b/covid19_interactSIR.ipynb
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T12:57:00.059740Z",
-     "start_time": "2020-04-04T12:56:59.534498Z"
+     "end_time": "2020-04-04T13:36:06.666113Z",
+     "start_time": "2020-04-04T13:36:06.213247Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fc50f2945e6469f8843adea92451d39",
+       "model_id": "445cf85fede1420b8435ba2449be5142",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,13 +51,19 @@
     "         timesteps=fixed(np.arange(0., 1000, 1)), country = Dropdown(options=list(Confirmed.columns), value='US'), \n",
     "         measured_cases = fixed(Confirmed),\n",
     "         S_0=FloatSlider(value=500000, min=Confirmed.max().mean(), max=5*Confirmed.max().max(), step=1000,\n",
-    "                           continuous_update=False, description='Affected population'), I_0=fixed(1), R_0=fixed(0),\n",
+    "                           continuous_update=False, description='Affected population', style = {'description_width': 'initial'}, \n",
+    "                           layout=Layout(width='50%', height='30px')), \n",
+    "         I_0=fixed(1), R_0=fixed(0),\n",
     "         log10_beta=FloatSlider(value=-6.3, min=-8, max=-5, step=0.001, continuous_update=True, readout_format='.2e',\n",
-    "                               description='log10(infection rate)'),\n",
-    "         gamma=FloatSlider(value=0.06, min=0, max=0.06, step=0.001, continuous_update=False, readout_format='.2e',\n",
-    "                          description='Recovery rate'), style = {'description_width': 'initial'},\n",
+    "                               description='log10(infection rate)', style = {'description_width': 'initial'}, \n",
+    "                                layout=Layout(width='50%', height='30px')),\n",
+    "         gamma=FloatSlider(value=0.06, min=0, max=0.06, step=0.001, \n",
+    "                           description='Recovery rate', style = {'description_width': 'initial'}, \n",
+    "                           layout=Layout(width='50%', height='30px')), \n",
+    "         \n",
+    "         continuous_update=False, readout_format='.2e',\n",
     "#          layout=Layout(width='60%', height='300px'),\n",
-    "         returnDataFrame=fixed(False));"
+    "         returnDataFrame=fixed(False), plotFig=fixed(True));"
    ]
   },
   {
@@ -233,18 +239,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# SIR Model definition"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Inspired by https://www.linkedin.com/pulse/covid-19-from-model-prediction-predictive-control-ingmar-nopens/"
    ]
@@ -256,8 +258,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-04T12:52:14.310556Z",
      "start_time": "2020-04-04T12:52:14.302234Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -280,8 +281,7 @@
     "ExecuteTime": {
      "end_time": "2020-04-04T12:52:14.758237Z",
      "start_time": "2020-04-04T12:52:14.746156Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -319,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
