--- a/covid19_interactSIR.ipynb
+++ b/covid19_interactSIR.ipynb
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:36:06.666113Z",
-     "start_time": "2020-04-04T13:36:06.213247Z"
+     "end_time": "2020-04-04T13:37:34.434479Z",
+     "start_time": "2020-04-04T13:37:33.956281Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "445cf85fede1420b8435ba2449be5142",
+       "model_id": "dfc62ee0332d440a808bfa2603844e94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -57,13 +57,9 @@
     "         log10_beta=FloatSlider(value=-6.3, min=-8, max=-5, step=0.001, continuous_update=True, readout_format='.2e',\n",
     "                               description='log10(infection rate)', style = {'description_width': 'initial'}, \n",
     "                                layout=Layout(width='50%', height='30px')),\n",
-    "         gamma=FloatSlider(value=0.06, min=0, max=0.06, step=0.001, \n",
-    "                           description='Recovery rate', style = {'description_width': 'initial'}, \n",
-    "                           layout=Layout(width='50%', height='30px')), \n",
-    "         \n",
-    "         continuous_update=False, readout_format='.2e',\n",
-    "#          layout=Layout(width='60%', height='300px'),\n",
-    "         returnDataFrame=fixed(False), plotFig=fixed(True));"
+    "         gamma=FloatSlider(value=0.06, min=0, max=0.06, step=0.001, description='Recovery rate', style = {'description_width': 'initial'}, \n",
+    "                           layout=Layout(width='50%', height='30px')),          \n",
+    "         continuous_update=False, readout_format='.2e', returnDataFrame=fixed(False), plotFig=fixed(True));"
    ]
   },
   {
