--- a/covid19_loglogplot.ipynb
+++ b/covid19_loglogplot.ipynb
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-04T13:23:29.921084Z",
-     "start_time": "2020-04-04T13:23:28.999680Z"
+     "end_time": "2020-04-04T13:39:35.619773Z",
+     "start_time": "2020-04-04T13:39:34.792056Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27b77d774bf044d09a35b259891c8ded",
+       "model_id": "27fcd831ccbf4f44a17103e554197cbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,8 +52,7 @@
     "         country = SelectMultiple(options=list(Confirmedweeklyrates.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
     "                                  description='Select countries (Ctrl+ for multi-selection)',\n",
     "                                  style = {'description_width': 'initial'}, layout=Layout(width='50%', height='100px')), \n",
-    "         return_df = fixed(False), \n",
-    "         return_plot = fixed(True));"
+    "         return_df = fixed(False), return_plot = fixed(True));"
    ]
   },
   {
